# Milvus

./: .env.example  .gitignore  CLAUDE.md  README.md  README_EN.md  docker-compose.yml
.claude/: settings.json
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/config/: milvus.xml
backend/scripts/: ingest_data.py  ingest_plugins.py  search_plugins.py  test_embedding_device.py
backend/src/api/: main.py
backend/src/api/routers/: chat.py  ingest.py
backend/src/core/: config.py  embeddings.py  logger.py  prompt.py  vector_store.py
backend/src/models/: schemas.py
backend/src/services/: ingest.py  search.py  session_store.py
backend/tests/: test.py
data/: sample_faq.md  sample_faq.xml
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: index.css
frontend/src/api/: chat.ts
frontend/src/components/: ChatInput.tsx  ChatInterface.tsx  MessageBubble.tsx  MessageList.tsx
frontend/src/stores/: chatStore.ts
k8s/: configmap.yaml  ingress.yaml  namespace.yaml  secret.yaml
k8s/backend/: backend-deployment.yaml  backend-hpa.yaml
k8s/frontend/: frontend-deployment.yaml
k8s/milvus/: milvus-deployment.yaml
nginx/: nginx.conf
