[project]
name = "rag-backend"
version = "1.0.0"
description = "RAG Customer Service Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn[standard]==0.27.1",
    "pymilvus==2.4.0",
    "langchain==0.1.17",
    "langchain-community==0.0.38",
    "langchain-openai==0.1.8",
    "langchain-core==0.1.52",
    "pypdf==4.2.0",
    "python-docx==1.1.0",
    "tiktoken==0.7.0",
    "python-multipart==0.0.9",
    "pydantic==2.6.4",
    "pydantic-settings==2.2.1",
    "redis==5.0.3",
    "httpx==0.27.0",
]

[tool.uv]
dev-dependencies = [
    "pytest==8.1.1",
    "pytest-asyncio==0.23.5",
]
