[project]
name = "rag-backend"
version = "1.0.0"
description = "RAG Customer Service Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn[standard]==0.27.1",
    "pymilvus==2.6.0",
    "langchain>=0.3.8",
    "langchain-community>=0.3.8",
    "langchain-openai>=0.1.14",
    "pypdf==4.2.0",
    "python-docx==1.1.0",
    "tiktoken>=0.7.0",
    "python-multipart==0.0.9",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.2.1",
    "redis==5.0.3",
    "httpx==0.27.0",
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "numpy>=2.0.0",
    "sentence-transformers>=3.0.0",
    "langchain-ollama>=1.1.0",
    "rank-bm25>=0.2.2",
]

[dependency-groups]
dev = [
    "pytest==8.1.1",
    "pytest-asyncio==0.23.5",
]
